# perk-sandbox

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  README.md  SECURITY.md  SPEC.md  sandbox.toml
sandbox-macros/: Cargo.toml
sandbox-macros/src/: authority_attr.rs  bound_attr.rs  config.rs  instruction_attr.rs  invariant_attr.rs  lib.rs  program_attr.rs  snapshot.rs  tx_anchor_codegen.rs  types.rs
sandbox-runtime/: Cargo.toml
sandbox-runtime/src/: circuit_breaker.rs  context.rs  cu.rs  edge_case_tests.rs  error.rs  external.rs  guard.rs  lib.rs  oracle.rs  rate_limit.rs  snapshot.rs  state.rs  tx_anchor.rs
sandbox-test-program/: Cargo.toml  sandbox.toml
sandbox-test-program/src/: lib.rs
sandbox-test-program/tests/: integration.rs
