[package]
name = "perk-sandbox-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for PERK Sandbox — compile-time safety for Solana programs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
bs58 = "0.5"
